--- a/Головна.html
+++ b/Головна.html
@@ -100,27 +100,27 @@ return false;
 		      <ul>
         <li><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li><a href="404.html">Наш колектив</a></li>
-        <li><a href="Контакти.html">Контакти</a></li>
+		<li><a href="Контакти.html">Контакти</a></li>
       </ul>
 	</li>
-		<li><a href="Інфраструктури.html">Установи</a>
+	<li><a href="404.html">Установи</a>
 	<ul>
-	    <li><a target="_blank" href="http://gre.klasna.com">Школа</a></li>
+	    <li><a href="http://gre.klasna.com">Школа</a></li>
         <li><a href="404.html">ДНЗ "Сонечко"</a></li>
 		<li><a href="404.html">Клуб</a></li>
 		<li><a href="404.html">ФАП</a></li>
 		<li><a href="404.html">Бібліотека</a></li>
 	</ul>
 	</li>
-	<li><img class="plus" src="images/+.jpg" width="22px" height="22px">
+		<li><img class="plus" src="images/+.jpg" width="22px" height="22px">
 	<ul>
 	<li><a href="Рішення сесії.html">Рішення сесії</a></li>
 	<li><a href="#okno">Графік роботи</a></li>
-        <li><a href="#okno1">Графік прийому</a></li>
+	<li><a href="#okno1">Графік прийому</a></li>
 	<li><a href="404.html">Державні закупівлі</a></li>
 	<li><a href="Депутатський корпус.html">Депутатський корпус</a></li>
 	<li><a href="404.html">Звернення громадян</a></li>
-        <li><a href="404.html">Про зроблене <br> за поточний рік</a></li>
+	<li><a href="404.html">Про зроблене <br> за поточний рік</a></li>
 	</ul>
 	</li>
   </ul>
