--- a/index.html
+++ b/index.html
@@ -2,28 +2,24 @@
 <head>
  <meta charset="utf-8">
 <title>Home</title>
-<link rel="shortcut icon" href="/images/Grechanivka_gd_gerb.ico" type="image/x-icon">
-<script src="https://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<script src="js/jquery-1.4.4.min.js"></script>
-	<script src="js/slides.min.jquery.js"></script>
-	<script>
-		$(function(){
-			$('#products').slides({
-				preload: true,
-				preloadImage: 'img/loading.gif',
-				effect: 'slide, fade',
-				crossfade: true,
-				slideSpeed: 200,
-				fadeSpeed: 500,
-				generateNextPrev: true,
-				generatePagination: false
-			});
+<link rel="stylesheet" type="text/css" href="style1.css" media="screen" />
+<script type="text/javascript" src="./scripts/jquery-1.4.3.min.js"></script>
+<script type="text/javascript" src="./scripts/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+<script type="text/javascript" src="./scripts/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<link rel="stylesheet" type="text/css" href="./scripts/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
+<script type="text/javascript">
+	$(document).ready(function(){
+		$("a.photo").fancybox({
+			transitionIn: 'elastic',
+			transitionOut: 'elastic',
+			speedIn: 500,
+			speedOut: 500,
+			hideOnOverlayClick: false,
+			titlePosition: 'over'
 		});
+	});
 	</script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-</script>
 <script type="text/javascript">
 $(document).ready(function(){
  
@@ -100,33 +96,32 @@ return false;
 		      <ul>
         <li><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li><a href="404.html">Наш колектив</a></li>
-        <li><a href="Контакти.html">Контакти</a></li>
+		<li><a href="Контакти.html">Контакти</a></li>
       </ul>
 	</li>
-		<li><a href="Інфраструктури.html">Установи</a>
+	<li><a href="404.html">Установи</a>
 	<ul>
-	    <li><a target="_blank" href="http://gre.klasna.com">Школа</a></li>
+	    <li><a href="http://gre.klasna.com">Школа</a></li>
         <li><a href="404.html">ДНЗ "Сонечко"</a></li>
 		<li><a href="404.html">Клуб</a></li>
 		<li><a href="404.html">ФАП</a></li>
 		<li><a href="404.html">Бібліотека</a></li>
 	</ul>
 	</li>
-	<li><img class="plus" src="images/+.jpg" width="22px" height="22px">
+		<li><img class="plus" src="images/+.jpg" width="22px" height="22px">
 	<ul>
 	<li><a href="Рішення сесії.html">Рішення сесії</a></li>
 	<li><a href="#okno">Графік роботи</a></li>
-        <li><a href="#okno1">Графік прийому</a></li>
+	<li><a href="#okno1">Графік прийому</a></li>
 	<li><a href="404.html">Державні закупівлі</a></li>
 	<li><a href="Депутатський корпус.html">Депутатський корпус</a></li>
 	<li><a href="404.html">Звернення громадян</a></li>
-        <li><a href="404.html">Про зроблене <br> за поточний рік</a></li>
+	<li><a href="404.html">Про зроблене <br> за поточний рік</a></li>
 	</ul>
 	</li>
   </ul>
 </nav>
 </div>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/index.js"></script>
 	</div>
 	<div id="layer1" class="div_golovna">
