--- a/Про нас.html
+++ b/Про нас.html
@@ -2,28 +2,24 @@
 <head>
  <meta charset="utf-8">
 <title>About us</title>
-<link rel="shortcut icon" href="/images/Grechanivka_gd_gerb.ico" type="image/x-icon">
-<script src="https://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<script src="js/jquery-1.4.4.min.js"></script>
-	<script src="js/slides.min.jquery.js"></script>
-	<script>
-		$(function(){
-			$('#products').slides({
-				preload: true,
-				preloadImage: 'img/loading.gif',
-				effect: 'slide, fade',
-				crossfade: true,
-				slideSpeed: 200,
-				fadeSpeed: 500,
-				generateNextPrev: true,
-				generatePagination: false
-			});
+<link rel="stylesheet" type="text/css" href="style1.css" media="screen" />
+<script type="text/javascript" src="./scripts/jquery-1.4.3.min.js"></script>
+<script type="text/javascript" src="./scripts/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+<script type="text/javascript" src="./scripts/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<link rel="stylesheet" type="text/css" href="./scripts/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
+<script type="text/javascript">
+	$(document).ready(function(){
+		$("a.photo").fancybox({
+			transitionIn: 'elastic',
+			transitionOut: 'elastic',
+			speedIn: 500,
+			speedOut: 500,
+			hideOnOverlayClick: false,
+			titlePosition: 'over'
 		});
+	});
 	</script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-</script>
 <script type="text/javascript">
 $(document).ready(function(){
  
@@ -126,7 +122,6 @@ return false;
   </ul>
 </nav>
 </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/index.js"></script>
 	</div>
 	<div id="layer2" class="div">
