--- a/Рішення сесії.html
+++ b/Рішення сесії.html
@@ -96,7 +96,7 @@ return false;
 		<div id="layer2" align="center">
 		<nav id="nav" class="navigation">
   <ul>
-    <li class="current_page_item"><a href="Головна.html">Головна</a></li>
+    <li><a href="Головна.html">Головна</a></li>
     <li><a href="Події.html">Події</a></li>
     <li><a href="Галерея.html">Галерея</a></li>
     <li><a href="Про нас.html">Про нас</a>
