--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ return false;
 }
 
 </style>
-<a href="https://www.facebook.com/miroslawwlasenko">
+<a href="https://www.facebook.com/grerada">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
