--- a/Галерея.html
+++ b/Галерея.html
@@ -47,7 +47,7 @@ return false;
    #layer1 { z-index: 2; }
    #layer2 { z-index: 1; }
 </style>
-<a href="https://www.facebook.com/miroslawwlasenko">
+<a href="https://www.facebook.com/grerada">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
