--- a/Події.html
+++ b/Події.html
@@ -54,7 +54,7 @@ return false;
 	margin-right: 28px;
    }
 </style>
-<a href="https://www.facebook.com/miroslawwlasenko">
+<a href="https://www.facebook.com/grerada">
 <img src="facebook.jpg" class="icon">
 </a>
         <div id="okno">
