--- a/Депутатський корпус.html
+++ b/Депутатський корпус.html
@@ -73,7 +73,7 @@ td {
 }
 
 </style>
-<a href="https://www.facebook.com/miroslawwlasenko">
+<a href="https://www.facebook.com/grerada">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
