--- a/Контакти.html
+++ b/Контакти.html
@@ -71,7 +71,7 @@ return false;
 }
 
 </style>
-<a href="https://www.facebook.com/miroslawwlasenko">
+<a href="https://www.facebook.com/grerada">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
