--- a/Про нас.html
+++ b/Про нас.html
@@ -66,7 +66,7 @@ return false;
 	100% { color: #F00; } 
 }
 </style>
-<a href="https://www.facebook.com/miroslawwlasenko" target="_blank">
+<a href="https://www.facebook.com/grerada" target="_blank">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
