--- a/Рішення сесії.html
+++ b/Рішення сесії.html
@@ -74,7 +74,7 @@ return false;
 }
 
 </style>
-<a href="https://www.facebook.com/miroslawwlasenko">
+<a href="https://www.facebook.com/grerada">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
