--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
  <meta charset="utf-8">
+ <meta name="https://mirios.github.io/grerada.ua/" content="Офіційний.Сайт.Гренівської.сільської.ради,Гречанівка,Гадяцький.район">
 <title>Home</title>
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="style1.css" media="screen" />
