--- a/Про нас.html
+++ b/Про нас.html
@@ -79,6 +79,14 @@ return false;
       <a href="#" class="close">Завершити перегляд</a>
     </div>
 	
+			    <div id="okno2">
+         <h3 style="margin: 0px 25px 0px 25px; padding-top: 25px; font-size: 25px;">Контакти</h3>
+		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#127968; Адреса: Полтавська обл., Гадяцький р-н, с. Гречанівка вул. Польова 1, 36412.</p>
+		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#128222; Телефон: 5-54-32</p>
+		<p style="margin: 0px 25px 0px 25px; padding-bottom: 25px; font-size: 25px; text-align: left;">&#128231; Email: grerada@ukr.net</p>
+      <a href="#" class="close">Завершити перегляд</a>
+    </div>
+	
 		<a href="#" class="scrollup">Наверх</a>
 <div align="center" class="blok">
 <div id="wrapper">
@@ -96,7 +104,7 @@ return false;
 		      <ul>
         <li class="current_page_item1"><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li class="current_page_item1"><a href="404.html">Наш колектив</a></li>
-        <li class="current_page_item1"><a href="Контакти.html">Контакти</a></li>
+        <li class="current_page_item1"><a href="#okno2">Контакти</a></li>
       </ul>
 	</li>
 		<li><a href="404.html">Установи</a>
