--- a/Депутатський корпус.html
+++ b/Депутатський корпус.html
@@ -81,14 +81,6 @@ td {
       <a href="#" class="close">Завершити перегляд</a>
     </div>
 	
-			    <div id="okno2">
-         <h3 style="margin: 0px 25px 0px 25px; padding-top: 25px; font-size: 25px;">Контакти</h3>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#127968; Адреса: Полтавська обл., Гадяцький р-н, с. Гречанівка вул. Польова 1, 36412.</p>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#128222; Телефон: 5-54-32</p>
-		<p style="margin: 0px 25px 0px 25px; padding-bottom: 25px; font-size: 25px; text-align: left;">&#128231; Email: grerada@ukr.net</p>
-      <a href="#" class="close">Завершити перегляд</a>
-    </div>
-	
 	    <div id="okno1">
       <img src="images/прийом(+).jpg" width="950px" height="93%"><br>
       <a href="#" class="close">Завершити перегляд</a>
@@ -110,7 +102,7 @@ td {
 		      <ul>
         <li><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li><a href="404.html">Наш колектив</a></li>
-        <li><a href="#okno2">Контакти</a></li>
+        <li><a href="Контакти.html">Контакти</a></li>
       </ul>
 	</li>
 		<li><a href="404.html">Установи</a>
@@ -138,11 +130,13 @@ td {
 </div>
     <script src="js/index.js"></script>
 	</div>
-	<div id="layer1" class="div_golovna">
+	<table width="100%" class="div">
+	<td style="vertical-align: top;">
+	<div id="layer1">
 	<br>
 	<br>
 	<div align="center" width="800px">
-  <table border="1" style="margin: 25px 25px 30px 25px; width=100%; border-collapse:collapse;" width="800px">
+  <table border="1" style="margin: 25px 25px 30px 190px; width=100%; border-collapse:collapse;" width="800px">
   <tr>
   <th style="vertical-align: top;">Номер одномандатного <br>
   виборчого округу</th>
@@ -273,6 +267,27 @@ td {
   </table>
   <br>
 	</div>
+	</td>
+	<td width="200px" style="vertical-align:top; text-align:right;">
+		<br>
+		<br>
+		<br>
+	<div>
+				<object type='application/x-shockwave-flash' data='10.swf' width='200' height='200'> 
+<param name='movie' value='10.swf'> 
+</object>
+<br>
+<br>
+	<!------Do not change code------>
+	<a target="_blank" href="http://www.calendian.com/%D0%9A%D0%B0%D0%BB%D0%B5%D0%BD%D0%B4%D0%B0%D1%80-2.html">
+	<img border="0" src="http://www.calendian.com/gen/uk.png" width="200" alt="Календар - Українська, Calendian">
+	</a><!------Do not change code------>
+	<br>
+	<br>
+	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" style="padding-right: 4px;" width="200" height="265" alt="pic"></a>
+	</div>
+	</td>
+	</table>
 	</div>
 	</div>
 	</div>
