--- a/Галерея.html
+++ b/Галерея.html
@@ -60,18 +60,10 @@ return false;
       <a href="#" class="close">Завершити перегляд</a>
     </div>
 	
-			    <div id="okno2">
-         <h3 style="margin: 0px 25px 0px 25px; padding-top: 25px; font-size: 25px;">Контакти</h3>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#127968; Адреса: Полтавська обл., Гадяцький р-н, с. Гречанівка вул. Польова 1, 36412.</p>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#128222; Телефон: 5-54-32</p>
-		<p style="margin: 0px 25px 0px 25px; padding-bottom: 25px; font-size: 25px; text-align: left;">&#128231; Email: grerada@ukr.net</p>
-      <a href="#" class="close">Завершити перегляд</a>
-    </div>
-	
 		<a href="#" class="scrollup">Наверх</a>
 <div align="center" class="blok" height="100%">
 <div id="wrapper">
-<table width="99%">
+<table width="99%" >
 <img src="images/bg.jpg" width="100%" class="img">
 </table>
 	<div class="verx">
@@ -85,7 +77,7 @@ return false;
 		      <ul>
         <li><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li><a href="404.html">Наш колектив</a></li>
-        <li><a href="#okno2">Контакти</a></li>
+        <li><a href="Контакти.html">Контакти</a></li>
       </ul>
 	</li>
 		<li><a href="404.html">Установи</a>
@@ -113,8 +105,9 @@ return false;
 </div>
     <script src="js/index.js"></script>
 	</div>
-			<div id="layer2" class="div_gallery ">
-			<br>
+	<table width="100%" id="layer2" class="table_gallery">
+	<td style="vertical-align: top; height: 100%; background: #F8F8F8 url(images/954074558.jpg) repeat; padding: 50px 10px 10px 10px;">
+			<div id="layer2">
 			<br>
 			<div align="center" class="galereiy_huruna">
 			  <div class="picture">
@@ -156,9 +149,28 @@ return false;
 </div>		  
 </div>
 			</div>
+			</td>
+			<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;"> 
+	<br>
+	<div>
+				<object type='application/x-shockwave-flash' data='10.swf' width='200' height='200'> 
+<param name='movie' value='10.swf'> 
+</object>
+<br>
+<br>
+	<!------Do not change code------>
+	<a target="_blank" href="http://www.calendian.com/%D0%9A%D0%B0%D0%BB%D0%B5%D0%BD%D0%B4%D0%B0%D1%80-2.html">
+	<img border="0" src="http://www.calendian.com/gen/uk.png" width="200" alt="Календар - Українська, Calendian">
+	</a><!------Do not change code------>
+	<br>
+	<br>
+	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" width="200" height="265" alt="pic"></a>
+	</div>
+			</td>
+			</table>
 			</div>
 			</div>
-<footer>
+<footer id="layer2">
         <p class="copyright">
             Copyright &copy; 
 			<a href="Головна.html" class="a2">2018 Гречанівська сільська рада</a> 
