--- a/Події.html
+++ b/Події.html
@@ -47,12 +47,6 @@ return false;
    #layer1 { z-index: 2; }
    #layer2 { z-index: 1; }
    #layer3 { z-index: 100; }
-   
-   #disqus_thread{
-    background: #ffffff;
-	margin-left: 28px;
-	margin-right: 28px;
-   }
 </style>
 <a href="https://www.facebook.com/grerada">
 <img src="facebook.jpg" class="icon">
@@ -64,14 +58,6 @@ return false;
 	
 	    <div id="okno1">
       <img src="images/прийом(+).jpg" width="950px" height="93%"><br>
-      <a href="#" class="close">Завершити перегляд</a>
-    </div>
-	
-			    <div id="okno2">
-         <h3 style="margin: 0px 25px 0px 25px; padding-top: 25px; font-size: 25px;">Контакти</h3>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#127968; Адреса: Полтавська обл., Гадяцький р-н, с. Гречанівка вул. Польова 1, 36412.</p>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#128222; Телефон: 5-54-32</p>
-		<p style="margin: 0px 25px 0px 25px; padding-bottom: 25px; font-size: 25px; text-align: left;">&#128231; Email: grerada@ukr.net</p>
       <a href="#" class="close">Завершити перегляд</a>
     </div>
 	
@@ -92,7 +78,7 @@ return false;
 		      <ul>
         <li><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li><a href="404.html">Наш колектив</a></li>
-		<li><a href="#okno2">Контакти</a></li>
+		<li><a href="Контакти.html">Контакти</a></li>
       </ul>
 	</li>
 	<li><a href="404.html">Установи</a>
@@ -121,12 +107,14 @@ return false;
 
     <script src="js/index.js"></script>
 	</div>
-	<div id="layer2" class="div_news">	
- <p class="data" id="data">
+	<table class="table_news">
+	<td style="vertical-align: top; height: 100%; background: #F8F8F8 url(images/1345626990_olyas549.jpg) repeat;">
+	<div id="layer2">	
+ <p class="data" id="data" >
     15.02.2017p. 
  </p>
- 
-<div class="fon_pod_rext_news1" class="text">
+
+<div class="fon_pod_rext_news" class="text">
  <p>
  <h2 class="Zagolovok">Нові книги для бібліотеки</h2>
  </p>
@@ -174,6 +162,25 @@ return false;
 	</div>
 	</div>
 	</div>
+	</td>
+	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
+		<br>
+	<div>
+				<object type='application/x-shockwave-flash' data='10.swf' width='200' height='200'> 
+<param name='movie' value='10.swf'> 
+</object>
+<br>
+<br>
+	<!------Do not change code------>
+	<a target="_blank" href="http://www.calendian.com/%D0%9A%D0%B0%D0%BB%D0%B5%D0%BD%D0%B4%D0%B0%D1%80-2.html">
+	<img border="0" src="http://www.calendian.com/gen/uk.png" width="200" alt="Календар - Українська, Calendian">
+	</a><!------Do not change code------>
+	<br>
+	<br>
+	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" width="200" height="265" alt="pic"></a>
+	</div>
+	</td>
+	</table>
 	</div>
 <footer>
         <p class="copyright">
