--- a/Про нас.html
+++ b/Про нас.html
@@ -79,14 +79,6 @@ return false;
       <a href="#" class="close">Завершити перегляд</a>
     </div>
 	
-			    <div id="okno2">
-         <h3 style="margin: 0px 25px 0px 25px; padding-top: 25px; font-size: 25px;">Контакти</h3>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#127968; Адреса: Полтавська обл., Гадяцький р-н, с. Гречанівка вул. Польова 1, 36412.</p>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#128222; Телефон: 5-54-32</p>
-		<p style="margin: 0px 25px 0px 25px; padding-bottom: 25px; font-size: 25px; text-align: left;">&#128231; Email: grerada@ukr.net</p>
-      <a href="#" class="close">Завершити перегляд</a>
-    </div>
-	
 		<a href="#" class="scrollup">Наверх</a>
 <div align="center" class="blok">
 <div id="wrapper">
@@ -104,7 +96,7 @@ return false;
 		      <ul>
         <li class="current_page_item1"><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li class="current_page_item1"><a href="404.html">Наш колектив</a></li>
-        <li class="current_page_item1"><a href="#okno2">Контакти</a></li>
+        <li class="current_page_item1"><a href="Контакти.html">Контакти</a></li>
       </ul>
 	</li>
 		<li><a href="404.html">Установи</a>
@@ -132,7 +124,9 @@ return false;
 </div>
     <script src="js/index.js"></script>
 	</div>
-	<div id="layer2" class="div">
+	<table width="100%" class="div">
+	<td style="vertical-align: top;">
+	<div id="layer2">
 	<br>
 	<table style="margin: 25px 25px 0 0;">
 	<tr>
@@ -151,7 +145,9 @@ return false;
 <p><b>Телефон:</b>5-54-32</p>
 <p><b>Голова/староста:</b> Власенко Валерій Борисович</p>
 </td>
-<td width="50%" style="vertical-align:top; text-align:right;"><img src="images/Gerb.jpg"></td>
+<td width="50%" style="vertical-align:top; text-align:right;">
+<br>
+<img src="images/Gerb.jpg"></td>
 </tr>
 </table>
 <table align="center" width="80%" height="50%">
@@ -159,12 +155,31 @@ return false;
 <td>
 <iframe class="rightimg "
  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10149.222914121601!2d33.9009588157582!3d50.509878021822104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4129daf6bb3b3505%3A0x4d67d31682fbcf5d!2z0JPRgNC10YfQsNC90ZbQstC60LAsINCf0L7Qu9GC0LDQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCAzNzMxMA!5e0!3m2!1suk!2sua!4v1514213521923" 
- width="100%" height="90%" frameborder="0" style="border:0" class="p1" allowfullscreen></iframe></td>
+ width="100%" height="275px" frameborder="0" style="border:0" class="p1" allowfullscreen></iframe></td>
 </tr>
 	</div>
 </table>
 <br/>
 	</div>
+	</td>
+	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
+	<br>
+	<div>
+				<object type='application/x-shockwave-flash' data='10.swf' width='200' height='200'> 
+<param name='movie' value='10.swf'> 
+</object>
+<br>
+<br>
+	<!------Do not change code------>
+	<a target="_blank" href="http://www.calendian.com/%D0%9A%D0%B0%D0%BB%D0%B5%D0%BD%D0%B4%D0%B0%D1%80-2.html">
+	<img border="0" src="http://www.calendian.com/gen/uk.png" width="200" alt="Календар - Українська, Calendian">
+	</a><!------Do not change code------>
+	<br>
+	<br>
+	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" width="200" height="265" alt="pic"></a>
+	</div>
+	</td>
+	</table>
 	</div>
 	</div>
 <footer>
