--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@ return false;
 	50% { color: #FBB; }
 	100% { color: #F00; } 
 }
-
 </style>
-<a href="https://www.facebook.com/grerada">
+<a href="https://www.facebook.com/groups/148563725834636/?source=create_flow">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
@@ -80,10 +79,19 @@ return false;
       <img src="images/прийом(+).jpg" width="950px" height="93%"><br>
       <a href="#" class="close">Завершити перегляд</a>
     </div>
+	
+		    <div id="okno2">
+         <h3 style="margin: 0px 25px 0px 25px; padding-top: 25px; font-size: 25px;">Контакти</h3>
+		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#127968; Адреса: Полтавська обл., Гадяцький р-н, с. Гречанівка вул. Польова 1, 36412.</p>
+		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#128222; Телефон: 5-54-32</p>
+		<p style="margin: 0px 25px 0px 25px; padding-bottom: 25px; font-size: 25px; text-align: left;">&#128231; Email: grerada@ukr.net</p>
+      <a href="#" class="close">Завершити перегляд</a>
+    </div>
+	
 	<a href="#" class="scrollup">Наверх</a>
 <div align="center" class="blok" height="100%">
 <div id="wrapper">
-<table width="99%">
+<table width="99%" >
 <img src="images/bg.jpg" width="100%" class="img">
 </table>
 	<div class="verx">
@@ -97,7 +105,7 @@ return false;
 		      <ul>
         <li><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li><a href="404.html">Наш колектив</a></li>
-		<li><a href="Контакти.html">Контакти</a></li>
+		<li><a href="#okno2">Контакти</a></li>
       </ul>
 	</li>
 	<li><a href="404.html">Установи</a>
@@ -125,10 +133,12 @@ return false;
 </div>
     <script src="js/index.js"></script>
 	</div>
+	<table width="100%" class="table_golovna">
+	<td style="vertical-align: top;">
 	<div id="layer1" class="div_golovna">
 	<br>
 	<p class="stroke" id="blink" align="center">Гречанівська сільська рада - Вітаємо на офіційному сайті!</p>		
-<img src="gallery_img/colectiv.jpg" class="rightimg" width="650" height="400" >
+<img src="gallery_img/colectiv.jpg" class="rightimg" width="550" height="350" >
  <div class="p0">
  <b><em>
  <p>Шановні мешканці села Гречанівка та відвідувачі сайту!</p>
@@ -148,13 +158,31 @@ return false;
 <b><i>
 <table width="100%" class="p0">
 <tr>
-<td width="40%"><b><i>З повагою,
+<td width="60%"><b><i>З повагою,
 Гречанівський сільський голова</td>
-<td width="10%"></td>
-<td width="60%" align="left"><b><em>Власенко Валерій Борисович.</td></tr></table>
+<td width="40%" align="left"><b><em>Власенко Валерій Борисович.</td></tr></table>
 </i></b>
 <br>
 	</div>
+	</td>
+	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
+	<br>
+	<div>
+				<object type='application/x-shockwave-flash' data='10.swf' width='200' height='200'> 
+<param name='movie' value='10.swf'> 
+</object>
+<br>
+<br>
+	<!------Do not change code------>
+	<a target="_blank" href="http://www.calendian.com/%D0%9A%D0%B0%D0%BB%D0%B5%D0%BD%D0%B4%D0%B0%D1%80-2.html">
+	<img border="0" src="http://www.calendian.com/gen/uk.png" width="200" alt="Календар - Українська, Calendian">
+	</a><!------Do not change code------>
+	<br>
+	<br>
+	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" width="200" height="265" alt="pic"></a>
+	</div>
+	</td>
+	</table>
 	</div>
 	</div>
 <footer bgcolor="#c0c0c0" id="layer2">
