--- a/Головна.html
+++ b/Головна.html
@@ -179,6 +179,40 @@ return false;
 	</a><!------Do not change code------>
 	<br>
 	<br>
+	<!-- Gismeteo informer START -->
+<link rel="stylesheet" type="text/css" href="https://s1.gismeteo.ua/static/css/informer2/gs_informerClient.min.css">
+<div id="gsInformerID-cua3r331g6BF0J" class="gsInformer" style="width:200px;height:262px">
+  <div class="gsIContent">
+    <div id="cityLink">
+        <a href="https://www.gismeteo.ua/ua/weather-hrechanivka-91288/" title="Погода у Гречанівці" target="_blank">
+            <img src="https://s1.gismeteo.ua/static/images/gisloader.svg" width="24" height="24" alt="Погода у Гречанівці">
+        </a>
+    </div>
+    <div class="gsLinks">
+     <table>
+       <tr>
+         <td>
+           <div class="leftCol">
+             <a href="https://www.gismeteo.ua/ua/" target="_blank" title="Погода">
+               <img alt="Погода" src="https://s1.gismeteo.ua/static/images/informer2/logo-mini2.png" align="middle" border="0" height="16" width="11"/>
+               <img src="https://s1.gismeteo.ua/static/images/gismeteo.svg" border="0" align="middle" style="left: 5px; top:1px">
+             </a>
+           </div>
+           <div class="rightCol">
+             <a href="https://www.gismeteo.ua/ua/weather-hrechanivka-91288/14-days/" target="_blank" title="Погода у Гречанівці на 2 тижні">
+                <img src="https://s1.gismeteo.ua/static/images/informer2/forecast-2weeks.ua.svg" border="0" align="middle" style="top:auto" alt="Погода у Гречанівці на 2 тижні">
+             </a>
+           </div>
+           </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
+<script src="https://www.gismeteo.ua/ajax/getInformer/?hash=cua3r331g6BF0J" type="text/javascript"></script>
+<!-- Gismeteo informer END -->
+	<br>
+	<br>
 	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" width="200" height="265" alt="pic"></a>
 	</div>
 	</td>
