--- a/Галерея.html
+++ b/Галерея.html
@@ -164,6 +164,9 @@ return false;
 	</a><!------Do not change code------>
 	<br>
 	<br>
+	<!-- weather widget start --><a target="_blank" href="http://hotelmix.com.ua/weather/hadyach-w675020"><img src="https://w.bookcdn.com/weather/picture/4_w675020_1_29_137AE9_200_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=&anc_id=79549"  alt="booked.net"/></a><!-- weather widget end -->
+	<br>
+	<br>
 	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" width="200" height="265" alt="pic"></a>
 	</div>
 			</td>
