--- a/Галерея.html
+++ b/Галерея.html
@@ -164,7 +164,7 @@ return false;
 	</a><!------Do not change code------>
 	<br>
 	<br>
-	<!-- weather widget start --><a target="_blank" href="http://hotelmix.com.ua/weather/hadyach-w675020"><img src="https://w.bookcdn.com/weather/picture/4_w675020_1_29_137AE9_200_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=&anc_id=79549"  alt="booked.net"/></a><!-- weather widget end -->
+	<script src='http://pogoda.meta.ua/get_informer/Kyivska/Kyivskiy/Kyiv/?count_days=3&width=200&height=270&head_color=%23FFFFFF&text_color=%23000000&text_color2=%23000000&border_color=%23006699&head_bg_color=%23006699&backgroundTheme=auto&lang=ua&oe=UTF'></script>
 	<br>
 	<br>
 	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" width="200" height="265" alt="pic"></a>
