--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@ return false;
  
 });
 </script>
+        <link href="css/main.css" rel="stylesheet" type="text/css" />
+        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <script src="js/script.js"></script>
 </head>
 <body>
 <style>
@@ -167,10 +170,9 @@ return false;
 	</td>
 	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
 	<br>
-	<div>
-				<object type='application/x-shockwave-flash' data='10.swf' width='200' height='200'> 
-<param name='movie' value='10.swf'> 
-</object>
+        <div class="clocks" id="layer1">
+            <canvas id="canvas" width="200" height="200"></canvas>
+        </div>
 <br>
 <br>
 	<!------Do not change code------>
