--- a/Галерея.html
+++ b/Галерея.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta>
+<meta charset="utf-8">
 <title>Galleri</title>
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="style1.css" media="screen" />
@@ -38,6 +38,8 @@ return false;
  
 });
 </script>
+        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <script src="js/script.js"></script>
 </head>
 <body>
 <style>
@@ -60,6 +62,14 @@ return false;
       <a href="#" class="close">Завершити перегляд</a>
     </div>
 	
+			    <div id="okno2">
+         <h3 style="margin: 0px 25px 0px 25px; padding-top: 25px; font-size: 25px;">Контакти</h3>
+		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#127968; Адреса: Полтавська обл., Гадяцький р-н, с. Гречанівка вул. Польова 1, 36412.</p>
+		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#128222; Телефон: 5-54-32</p>
+		<p style="margin: 0px 25px 0px 25px; padding-bottom: 25px; font-size: 25px; text-align: left;">&#128231; Email: grerada@ukr.net</p>
+      <a href="#" class="close">Завершити перегляд</a>
+    </div>
+	
 		<a href="#" class="scrollup">Наверх</a>
 <div align="center" class="blok" height="100%">
 <div id="wrapper">
@@ -77,7 +87,7 @@ return false;
 		      <ul>
         <li><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li><a href="404.html">Наш колектив</a></li>
-        <li><a href="Контакти.html">Контакти</a></li>
+        <li><a href="#okno2">Контакти</a></li>
       </ul>
 	</li>
 		<li><a href="404.html">Установи</a>
@@ -153,9 +163,9 @@ return false;
 			<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;"> 
 	<br>
 	<div>
-				<object type='application/x-shockwave-flash' data='10.swf' width='200' height='200'> 
-<param name='movie' value='10.swf'> 
-</object>
+        <div class="clocks">
+            <canvas id="canvas" width="200" height="200"></canvas>
+        </div>
 <br>
 <br>
 	<!------Do not change code------>
