--- a/Депутатський корпус.html
+++ b/Депутатський корпус.html
@@ -141,7 +141,7 @@ td {
 </div>
     <script src="js/index.js"></script>
 	</div>
-	<table width="100%" class="div">
+	<table class="div">
 	<td style="vertical-align: top;">
 	<div id="layer1">
 	<br>
