--- a/Про нас.html
+++ b/Про нас.html
@@ -118,7 +118,7 @@ return false;
 		<li><a href="404.html">Бібліотека</a></li>
 	</ul>
 	</li>
-	<li><img class="plus" src="images/+.jpg" width="22px" height="22px">
+	<li id="layer1"><img class="plus" src="images/+.jpg" width="22px" height="22px">
 	<ul>
 	<li><a href="Рішення сесії.html">Рішення сесії</a></li>
 	<li><a href="#okno">Графік роботи</a></li>
@@ -174,7 +174,7 @@ return false;
 	</td>
 	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
 	<br>
-        <div class="clocks" id="layer1">
+        <div class="clocks" id="layer1" id="layer2">
             <canvas id="canvas" width="200" height="200"></canvas>
         </div>
 <br>
