--- a/Головна.html
+++ b/Головна.html
@@ -2,7 +2,7 @@
 <head>
  <meta charset="utf-8">
  <meta name="https://mirios.github.io/grerada.ua/" content="Офіційний.Сайт.Гренівської.сільської.ради,Гречанівка,Гадяцький.район">
-<title>Home офіційний сайт гречанівської сільської ради</title>
+<title>Офіційний сайт Гречанівської сільської ради</title>
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="style1.css" media="screen" />
 <script type="text/javascript" src="./scripts/jquery-1.4.3.min.js"></script>
