--- a/Депутатський корпус.html
+++ b/Депутатський корпус.html
@@ -1,7 +1,7 @@
 <html>
 <head>
  <meta charset="utf-8">
-<title>Deputy corps</title>
+<title>Офіційний сайт Гречанівської сільської ради</title>
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="style1.css" media="screen" />
 <script type="text/javascript" src="./scripts/jquery-1.4.3.min.js"></script>
