--- a/Події.html
+++ b/Події.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>News</title>
+<title>Офіційний сайт Гречанівської сільської ради</title>
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <script type="text/javascript" src="./scripts/jquery-1.4.3.min.js"></script>
@@ -117,8 +117,8 @@ return false;
 
     <script src="js/index.js"></script>
 	</div>
-	<table class="table_news">
-	<td style="vertical-align: top; height: 100%; background: #F8F8F8 url(images/1345626990_olyas549.jpg) repeat;">
+	<table width="100%" class="table_news">
+	<td style="vertical-align: top; background: #F8F8F8 url(images/1345626990_olyas549.jpg) repeat;">
 	<div id="layer2">	
  <p class="data" id="data" >
     15.02.2017p. 
@@ -141,7 +141,7 @@ return false;
 			title="Фотографія 2"><img src="gallery_img/big/13_02(2).jpg" width="400" height="500" alt="" /></a></td>
 			</tr>						
 			</table>
-
+ </div>
 <p class="data">
     15.02.2017p. 
  </p>
@@ -175,7 +175,7 @@ return false;
 	</td>
 	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
 		<br>
-        <div class="clocks" id="layer1">
+        <div class="clocks" id="layer2">
             <canvas id="canvas" width="200" height="200"></canvas>
         </div>
 <br>
