--- a/Про нас.html
+++ b/Про нас.html
@@ -174,7 +174,7 @@ return false;
 	</td>
 	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
 	<br>
-        <div class="clocks" id="layer1" id="layer2">
+        <div class="clocks" id="layer2">
             <canvas id="canvas" width="200" height="200"></canvas>
         </div>
 <br>
