--- a/Депутатський корпус.html
+++ b/Депутатський корпус.html
@@ -141,13 +141,13 @@ td {
 </div>
     <script src="js/index.js"></script>
 	</div>
-	<table class="div">
+	<table class="div" width="100%" style="table-layout:fixed;">
 	<td style="vertical-align: top;">
 	<div id="layer1">
 	<br>
 	<br>
-	<div align="center" width="800px">
-  <table border="1" style="margin: 25px 25px 30px 190px; width=100%; border-collapse:collapse;" width="800px">
+	<div align="center">
+  <table border="1" style="margin: 25px 25px 30px 25px; width=100%; border-collapse:collapse; table-layout:fixed;" width="800px">
   <tr>
   <th style="vertical-align: top;">Номер одномандатного <br>
   виборчого округу</th>
