--- a/Події.html
+++ b/Події.html
@@ -117,7 +117,7 @@ return false;
 
     <script src="js/index.js"></script>
 	</div>
-	<table width="100%" class="table_news">
+	<table width="100%" class="table_news" style="table-layout:fixed;">
 	<td style="vertical-align: top; background: #F8F8F8 url(images/1345626990_olyas549.jpg) repeat;">
 	<div id="layer2">	
  <p class="data" id="data" >
