--- a/Події.html
+++ b/Події.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<meta charset="utf-8">
-<title>Офіційний сайт Гречанівської сільської ради</title>
+<meta>
+<title>News</title>
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <script type="text/javascript" src="./scripts/jquery-1.4.3.min.js"></script>
@@ -38,8 +38,6 @@ return false;
  
 });
 </script>
-        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-        <script src="js/script.js"></script>
 </head>
 <body>
 <style>
@@ -63,14 +61,6 @@ return false;
       <a href="#" class="close">Завершити перегляд</a>
     </div>
 	
-				    <div id="okno2">
-         <h3 style="margin: 0px 25px 0px 25px; padding-top: 25px; font-size: 25px;">Контакти</h3>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#127968; Адреса: Полтавська обл., Гадяцький р-н, с. Гречанівка вул. Польова 1, 36412.</p>
-		<p style="margin: 0px 25px 0px 25px; font-size: 25px; text-align: left;">&#128222; Телефон: 5-54-32</p>
-		<p style="margin: 0px 25px 0px 25px; padding-bottom: 25px; font-size: 25px; text-align: left;">&#128231; Email: grerada@ukr.net</p>
-      <a href="#" class="close">Завершити перегляд</a>
-    </div>
-	
 		<a href="#" class="scrollup">Наверх</a>
 <div align="center" class="blok" height="100%">
 <div id="wrapper">
@@ -88,7 +78,7 @@ return false;
 		      <ul>
         <li><a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank">Історія</a></li>
         <li><a href="404.html">Наш колектив</a></li>
-		<li><a href="#okno2">Контакти</a></li>
+		<li><a href="Контакти.html">Контакти</a></li>
       </ul>
 	</li>
 	<li><a href="404.html">Установи</a>
@@ -118,7 +108,7 @@ return false;
     <script src="js/index.js"></script>
 	</div>
 	<table width="100%" class="table_news" style="table-layout:fixed;">
-	<td style="vertical-align: top; background: #F8F8F8 url(images/1345626990_olyas549.jpg) repeat;">
+	<td style="vertical-align: top; height: 100%; background: #F8F8F8 url(images/1345626990_olyas549.jpg) repeat;">
 	<div id="layer2">	
  <p class="data" id="data" >
     15.02.2017p. 
@@ -133,15 +123,15 @@ return false;
  Гречанівська сільська рада перерахувала 5000 грн. на придбання нових книг.
  </div>
 <div>
- <table class="gallery" align="center">
+ <table class="gallery" align="center" style="border-collapse: collapse;">
 			<tr>
-			<td><a rel="gallery" class="photo" href="gallery_img/big/13_02(1).jpg" 
-			title="Фотографія 1"><img src="gallery_img/big/13_02(1).jpg" width="400" height="500" alt="" /></a></td>
-			<td><a rel="gallery" class="photo" href="gallery_img/big/13_02(2).jpg" 
-			title="Фотографія 2"><img src="gallery_img/big/13_02(2).jpg" width="400" height="500" alt="" /></a></td>
+			<td style="text-align:right;"><a rel="gallery" class="photo" href="gallery_img/big/13_02(1).jpg" 
+			title="Фотографія 1"><img src="gallery_img/big/13_02(1).jpg" width="55%" height="500" alt="" /></a></td>
+			<td style="text-align:left;"><a rel="gallery" class="photo" href="gallery_img/big/13_02(2).jpg" 
+			title="Фотографія 2"><img src="gallery_img/big/13_02(2).jpg" width="55%" height="500" alt="" /></a></td>
 			</tr>						
 			</table>
- </div>
+
 <p class="data">
     15.02.2017p. 
  </p>
@@ -175,9 +165,10 @@ return false;
 	</td>
 	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
 		<br>
-        <div class="clocks" id="layer2">
-            <canvas id="canvas" width="200" height="200"></canvas>
-        </div>
+	<div>
+				<object type='application/x-shockwave-flash' data='10.swf' width='200' height='200'> 
+<param name='movie' value='10.swf'> 
+</object>
 <br>
 <br>
 	<!------Do not change code------>
@@ -187,9 +178,9 @@ return false;
 	<br>
 	<br>
 	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" width="200" height="265" alt="pic"></a>
+	</div>
 	</td>
 	</table>
-	</div>
 	</div>
 <footer>
         <p class="copyright">
