--- a/Події.html
+++ b/Події.html
@@ -38,6 +38,8 @@ return false;
  
 });
 </script>
+        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <script src="js/script.js"></script>
 </head>
 <body>
 <style>
@@ -166,9 +168,9 @@ return false;
 	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
 		<br>
 	<div>
-				<object type='application/x-shockwave-flash' data='10.swf' width='200' height='200'> 
-<param name='movie' value='10.swf'> 
-</object>
+        <div class="clocks" id="layer2">
+            <canvas id="canvas" width="200" height="200"></canvas>
+        </div>
 <br>
 <br>
 	<!------Do not change code------>
