--- a/Події.html
+++ b/Події.html
@@ -128,9 +128,9 @@ return false;
  <table class="gallery" align="center" style="border-collapse: collapse;">
 			<tr>
 			<td style="text-align:right;"><a rel="gallery" class="photo" href="gallery_img/big/13_02(1).jpg" 
-			title="Фотографія 1"><img src="gallery_img/big/13_02(1).jpg" width="55%" height="500" alt="" /></a></td>
+			title="Фотографія 1"><img src="gallery_img/big/13_02(1).jpg" width="55%" height="53%" alt="" /></a></td>
 			<td style="text-align:left;"><a rel="gallery" class="photo" href="gallery_img/big/13_02(2).jpg" 
-			title="Фотографія 2"><img src="gallery_img/big/13_02(2).jpg" width="55%" height="500" alt="" /></a></td>
+			title="Фотографія 2"><img src="gallery_img/big/13_02(2).jpg" width="55%" height="53%" alt="" /></a></td>
 			</tr>						
 			</table>
 
