--- a/Депутатський корпус.html
+++ b/Депутатський корпус.html
@@ -147,7 +147,7 @@ td {
 	<br>
 	<br>
 	<div align="center">
-  <table border="1" style="margin: 25px 25px 30px 25px; width=100%; border-collapse:collapse; table-layout:fixed;" width="800px">
+  <table border="1" style="margin: 25px 25px 30px 33%; border-collapse:collapse;" width="100%">
   <tr>
   <th style="vertical-align: top;">Номер одномандатного <br>
   виборчого округу</th>
