--- a/Галерея.html
+++ b/Галерея.html
@@ -188,5 +188,6 @@ return false;
 			<a href="https://vk.com/id307692482" class="a2">Vlasenko M.</a>
         </p>
     </footer>
+	<!-----github----->
 </body>
 </html>
