--- a/Події.html
+++ b/Події.html
@@ -169,7 +169,7 @@ return false;
 		<br>
 	<div>
         <div class="clocks" id="layer2">
-            <canvas id="canvas" width="200" height="200"></canvas>
+            <canvas id="canvas" width="200" height="200" style="background: radial-gradient(circle, #f9e497, #3366ff, #3333ff); border-radius: 10px;"></canvas>
         </div>
 <br>
 <br>
