--- a/Головна.html
+++ b/Головна.html
@@ -170,7 +170,7 @@ return false;
 	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
 	<br>
         <div class="clocks" id="layer1">
-            <canvas id="canvas" width="200" height="200"></canvas>
+            <canvas id="canvas" width="200" height="200" style="background: radial-gradient(circle, #f9e497, #3366ff, #3333ff); border-radius: 10px;"></canvas>
         </div>
 <br>
 <br>
