--- a/Депутатський корпус.html
+++ b/Депутатський корпус.html
@@ -284,7 +284,7 @@ td {
 		<br>
 		<br>
         <div class="clocks" id="layer1">
-            <canvas id="canvas" width="200" height="200"></canvas>
+            <canvas id="canvas" width="200" height="200" style="background: radial-gradient(circle, #f9e497, #3366ff, #3333ff); border-radius: 10px;"></canvas>
         </div>
 <br>
 <br>
