--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
  <meta charset="utf-8">
  <meta name="https://mirios.github.io/grerada.ua/" content="Офіційний.Сайт.Гренівської.сільської.ради,Гречанівка,Гадяцький.район">
-<title>Oфіційний сайт Гречанівської сільської ради</title>
+<title>Home офіційний сайт гречанівської сільської ради</title>
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="style1.css" media="screen" />
 <script type="text/javascript" src="./scripts/jquery-1.4.3.min.js"></script>
@@ -170,8 +170,8 @@ return false;
 	</td>
 	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
 	<br>
-        <div class="clocks" id="layer1">
-            <canvas id="canvas" width="200" height="200"></canvas>
+        <div class="clocks">
+            <canvas id="canvas" width="200" height="200" style="background: radial-gradient(circle, #f9e497, #3366ff, #3333ff); border-radius: 10px;"></canvas>
         </div>
 <br>
 <br>
