--- a/Головна.html
+++ b/Головна.html
@@ -2,7 +2,7 @@
 <head>
  <meta charset="utf-8">
  <meta name="https://mirios.github.io/grerada.ua/" content="Офіційний.Сайт.Гренівської.сільської.ради,Гречанівка,Гадяцький.район">
-<title>Офіційний сайт Гречанівської сільської ради</title>
+<title>Home офіційний сайт гречанівської сільської ради</title>
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="style1.css" media="screen" />
 <script type="text/javascript" src="./scripts/jquery-1.4.3.min.js"></script>
@@ -39,6 +39,7 @@ return false;
  
 });
 </script>
+        <link href="css/main.css" rel="stylesheet" type="text/css" />
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script src="js/script.js"></script>
 </head>
@@ -169,9 +170,16 @@ return false;
 	</td>
 	<td width="200px" style="padding: 50px 10px 10px 10px; vertical-align: top;">
 	<br>
-        <div class="clocks" id="layer1">
-            <canvas id="canvas" width="200" height="200" style="background: radial-gradient(circle, #f9e497, #3366ff, #3333ff); border-radius: 10px;"></canvas>
+        <div class="clocks">
+            <canvas id="canvas" width="200" height="200" style="background: radial-gradient(circle, #f9e497, #3366ff); border-radius: 10px;"></canvas>
         </div>
+<br>
+<br>
+	<div id="MeteoInformerWrap">
+<script type="text/javascript" src="http://meteo.ua/var/informers.js"></script>
+<script type="text/javascript">
+makeMeteoInformer("http://meteo.ua/informer/get.php?cities=14819&w=200&lang=ua&rnd=1&or=vert&clr=6&dt=today&style=classic",200,232);
+</script></div>
 <br>
 <br>
 	<!------Do not change code------>
