--- a/index.html
+++ b/index.html
@@ -175,11 +175,7 @@ return false;
         </div>
 <br>
 <br>
-<div id="MeteoInformerWrap">
-<script type="text/javascript" src="http://meteo.ua/var/informers.js"></script>
-<script type="text/javascript">
-makeMeteoInformer("http://meteo.ua/informer/get.php?cities=14819&w=200&lang=ua&rnd=1&or=vert&clr=6&dt=today&style=classic",200,231);
-</script></div>
+<div id="meteoprog_informer_standart" data-params="none:Hrechanivka-Poltavska:200x85:grey:48x50" ><a href="https://www.meteoprog.ua/ua/">погода</a><br /><a href="https://www.meteoprog.ua/ua/weather/Hrechanivka-Poltavska/">Погода в  Гречанівці </a><br /></div><script src="https://www.meteoprog.ua/ua/weather/informer/standart.js"></script>
 <br>
 <br>
 	<!------Do not change code------>
