--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ return false;
         </div>
 <br>
 <br>
-<div id="meteoprog_informer_standart" data-params="none:Hrechanivka-Poltavska:200x85:grey:48x50" ><a href="https://www.meteoprog.ua/ua/">погода</a><br /><a href="https://www.meteoprog.ua/ua/weather/Hrechanivka-Poltavska/">Погода в  Гречанівці </a><br /></div><script src="https://www.meteoprog.ua/ua/weather/informer/standart.js"></script>
+<div id="layer1" id="meteoprog_informer_standart" data-params="none:Hrechanivka-Poltavska:200x85:grey:48x50" ><a href="https://www.meteoprog.ua/ua/">погода</a><br /><a href="https://www.meteoprog.ua/ua/weather/Hrechanivka-Poltavska/">Погода в  Гречанівці </a><br /></div><script src="https://www.meteoprog.ua/ua/weather/informer/standart.js"></script>
 <br>
 <br>
 	<!------Do not change code------>
