--- a/Події.html
+++ b/Події.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta>
+ <meta charset="utf-8">
 <title>News</title>
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
@@ -38,7 +38,7 @@ return false;
  
 });
 </script>
-        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
         <script src="js/script.js"></script>
 </head>
 <body>
@@ -111,7 +111,29 @@ return false;
 	</div>
 	<table width="100%" class="table_news" style="table-layout:fixed;">
 	<td style="vertical-align: top; height: 100%; background: #F8F8F8 url(images/1345626990_olyas549.jpg) repeat;">
-	<div id="layer2">	
+	<div id="layer2">
+	
+<p class="data" id="data" >
+    26.02.2017p. 
+ </p>
+
+<div class="fon_pod_rext_news" class="text">
+ <p>
+ <h2 class="Zagolovok">Художня самодіяльність</h2>
+ </p>
+ <p>
+ <h3 class="p0">
+ Гречанівська загальноосвітня школа І-ІІ ступенів прийняла участь у районному огляді-конкурсі 
+ художньої самодіяльності "Веселка" за підтримки завідувача Гречанівського сільського клубу Гребенник Г. В.</p>
+ </div>
+<div>
+ <table class="gallery" align="center" style="border-collapse: collapse;">
+			<tr>
+			<td style="text-align:center;"><a rel="gallery" class="photo" href="gallery_img/new/26_02_2018.jpg" 
+			title="Фотографія 1"><img src="gallery_img/new/26_02_2018.jpg" width="55%" height="53%" alt="" /></a></td>
+			</tr>						
+			</table>
+</div>
  <p class="data" id="data" >
     15.02.2017p. 
  </p>
@@ -133,7 +155,7 @@ return false;
 			title="Фотографія 2"><img src="gallery_img/big/13_02(2).jpg" width="55%" height="53%" alt="" /></a></td>
 			</tr>						
 			</table>
-
+</div>
 <p class="data">
     15.02.2017p. 
  </p>
