--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@ return false;
  
 });
 </script>
-        <link href="css/main.css" rel="stylesheet" type="text/css" />
-        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script src="js/script.js"></script>
 </head>
 <body>
@@ -70,7 +68,7 @@ return false;
 	100% { color: #F00; } 
 }
 </style>
-<a href="https://www.facebook.com/groups/148563725834636/?source=create_flow">
+<a href="https://www.facebook.com/groups/414267068998496/about/" target="_blank">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
