--- a/Галерея.html
+++ b/Галерея.html
@@ -48,7 +48,7 @@ return false;
    #layer1 { z-index: 2; }
    #layer2 { z-index: 1; }
 </style>
-<a href="https://www.facebook.com/grerada">
+<a href="https://www.facebook.com/groups/414267068998496/about/" target="_blank">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
