--- a/Події.html
+++ b/Події.html
@@ -50,7 +50,7 @@ return false;
    #layer2 { z-index: 1; }
    #layer3 { z-index: 100; }
 </style>
-<a href="https://www.facebook.com/grerada">
+<a href="https://www.facebook.com/groups/414267068998496/about/" target="_blank">
 <img src="facebook.jpg" class="icon">
 </a>
         <div id="okno">
