--- a/Про нас.html
+++ b/Про нас.html
@@ -38,7 +38,6 @@ return false;
  
 });
 </script>
-        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script src="js/script.js"></script>
 </head>
 <body>
@@ -68,7 +67,7 @@ return false;
 	100% { color: #F00; } 
 }
 </style>
-<a href="https://www.facebook.com/grerada" target="_blank">
+<a href="https://www.facebook.com/groups/414267068998496/about/" target="_blank">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
