--- a/Рішення сесії.html
+++ b/Рішення сесії.html
@@ -38,7 +38,6 @@ return false;
  
 });
 </script>
-        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script src="js/script.js"></script>
 </head>
 <body>
@@ -76,7 +75,7 @@ return false;
 }
 
 </style>
-<a href="https://www.facebook.com/grerada">
+<a href="https://www.facebook.com/groups/414267068998496/about/" target="_blank">
 <img src="facebook.jpg" class="icon">
 </a>
     <div id="okno">
