--- a/Головна.html
+++ b/Головна.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿<!doctype html>
+<html>
 <head>
  <meta charset="utf-8">
  <meta name="https://mirios.github.io/grerada.ua/" content="Офіційний.Сайт.Гренівської.сільської.ради,Гречанівка,Гадяцький.район">
