--- a/Головна.html
+++ b/Головна.html
@@ -1,5 +1,4 @@
-﻿<!doctype html>
-<html>
+﻿<html>
 <head>
  <meta charset="utf-8">
  <meta name="https://mirios.github.io/grerada.ua/" content="Офіційний.Сайт.Гренівської.сільської.ради,Гречанівка,Гадяцький.район">
