--- a/index.html
+++ b/index.html
@@ -179,6 +179,13 @@ return false;
 	</a><!------Do not change code------>
 	<br>
 	<br>
+	<div id="MeteoInformerWrap">
+<script type="text/javascript" src="http://meteo.ua/var/informers.js"></script>
+<script type="text/javascript">
+makeMeteoInformer("http://meteo.ua/informer/get.php?cities=14819&w=200&lang=ua&rnd=1&or=vert&clr=6&dt=today&style=classic",200,232);
+</script></div>
+	<br>
+	<br>
 	<a href="https://drive.google.com/open?id=11t_wOd78wvmO-X_2QAi2Y_jVDuc7RPcl" target="_blank"><img src="images/Історія.jpg" width="200" height="265" alt="pic"></a>
 	</div>
 	</td>
