--- a/Події.html
+++ b/Події.html
@@ -155,7 +155,7 @@ return false;
 			</tr>						
 			</table>
 </div>
-	
+
 <p class="data" id="data" >
     26.02.2018p. 
  </p>
@@ -177,6 +177,8 @@ return false;
 			</tr>						
 			</table>
 </div>
+
+	
  <p class="data" id="data" >
     15.02.2018p. 
  </p>
@@ -227,6 +229,36 @@ return false;
             </tr>			
 			</table>
 	</div>
+	
+	<p class="data" id="data" >
+    29.01.2018p. 
+ </p>
+
+<div class="fon_pod_rext_news" class="text">
+ <p>
+ <h2 class="Zagolovok">Крути-наша слава, наша історія</h2>
+ </p>
+ <p>
+ <h3 class="p0">
+"Крути-наша слава,наша історія"- під такою назвою 
+Гречанівська бібліотека разом з бібліотекарем 
+Гречанівської ЗОШ Русанівською К.М. провели урок пам'яті.</p>
+ </div>
+<div>
+ <table class="gallery" align="center" style="border-collapse: collapse; vertical-align: top;">
+			<tr>
+			<td style="text-align:center;"><a rel="gallery" class="photo" href="gallery_img/new/29.01.2018/29_01_2018(1).jpg" 
+			title="Фотографія 1"><img src="gallery_img/new/29.01.2018/29_01_2018(1).jpg" width="350px" height="478px" alt="" /></a></td>
+		    <td><a rel="gallery" class="photo" href="gallery_img/new/29.01.2018/29_01_2018(2).jpg" 
+			title="Фотографія 2"><img src="gallery_img/new/29.01.2018/29_01_2018(2).jpg" width="130px" height="150px" alt="" /></a><br />
+			<a rel="gallery" class="photo" href="gallery_img/new/29.01.2018/29_01_2018(3).jpg" 
+			title="Фотографія 3"><img src="gallery_img/new/29.01.2018/29_01_2018(3).jpg" width="130px" height="150px" alt="" /></a><br />
+			<a rel="gallery" class="photo" href="gallery_img/new/29.01.2018/29_01_2018(4).jpg" 
+			title="Фотографія 3"><img src="gallery_img/new/29.01.2018/29_01_2018(4).jpg" width="130px" height="150px" alt="" /></a></td>
+			</tr>						
+			</table>
+</div>
+	
 	</div>
 	</div>
 	</td>
